--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
 		<!--Apache poi-->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
-			<artifactId>poi</artifactId>
+			<artifactId>poi-ooxml</artifactId>
 			<version>5.3.0</version>
 		</dependency>
 
