--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,12 @@
 			<version>5.3.0</version>
 		</dependency>
 
+		<!--Apache commons IO-->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.17.0</version>
+		</dependency>
 
 	</dependencies>
 
